test/fail/uninit_read.bril
@main {
  two: int = const 2;
  p: ptr<int> = alloc two;
  tmp: int = load p;
  print tmp;
  free p;
}
